--- a/yu-gi-oh-api/docker-compose.yml
+++ b/yu-gi-oh-api/docker-compose.yml
@@ -22,5 +22,66 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  pokedex-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8088:8080"
+    depends_on:
+      - hydra-admin
+      - hydra-public
+    environment:
+      - Authentication__Authority=http://hydra-public:4444
+      - Authentication__Issuer=http://hydra-public:4444
+
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: hydra
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: hydra
+    ports:
+      - "5432:5432"
+    volumes:
+      - hydra-data:/var/lib/postgresql/data
+
+  hydra-migrate:
+    image: oryd/hydra:v2.2
+    depends_on:
+      - postgres
+    environment:
+      - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
+    command: migrate sql -e --yes
+
+  hydra-admin:
+    image: oryd/hydra:v2.2
+    depends_on:
+      - hydra-migrate
+    environment:
+      - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
+      - URLS_SELF_ISSUER=http://hydra-public:4444
+      - SECRETS_SYSTEM=thisisaverysecretkey123
+    command: serve admin --dev
+    ports:
+      - "4445:4445"
+
+  hydra-public:
+    image: oryd/hydra:v2.2
+    depends_on:
+      - hydra-migrate
+    environment:
+      - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
+      - URLS_SELF_ISSUER=http://hydra-public:4444
+      - SECRETS_SYSTEM=thisisaverysecretkey123
+    command: serve public --dev
+    ports:
+      - "4444:4444"
+
 volumes:
   mongo-data:
+  hydra-data:
+
+networks:
+  default:
+    name: hydra-net
