--- a/yu-gi-oh-api/docker-compose.yml
+++ b/yu-gi-oh-api/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   api:
     build: .
@@ -13,6 +11,8 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+    networks:
+      - internal-net
 
   mongo:
     image: mongo
@@ -21,19 +21,8 @@ services:
       - "27019:27017"
     volumes:
       - mongo-data:/data/db
-
-  pokedex-api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8088:8080"
-    depends_on:
-      - hydra-admin
-      - hydra-public
-    environment:
-      - Authentication__Authority=http://hydra-public:4444
-      - Authentication__Issuer=http://hydra-public:4444
+    networks:
+      - internal-net
 
   postgres:
     image: postgres:15
@@ -45,6 +34,8 @@ services:
       - "5432:5432"
     volumes:
       - hydra-data:/var/lib/postgresql/data
+    networks:
+      - internal-net
 
   hydra-migrate:
     image: oryd/hydra:v2.2
@@ -53,6 +44,8 @@ services:
     environment:
       - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
     command: migrate sql -e --yes
+    networks:
+      - internal-net
 
   hydra-admin:
     image: oryd/hydra:v2.2
@@ -65,6 +58,8 @@ services:
     command: serve admin --dev
     ports:
       - "4445:4445"
+    networks:
+      - internal-net
 
   hydra-public:
     image: oryd/hydra:v2.2
@@ -77,11 +72,12 @@ services:
     command: serve public --dev
     ports:
       - "4444:4444"
+    networks:
+      - internal-net
 
 volumes:
   mongo-data:
   hydra-data:
 
 networks:
-  default:
-    name: hydra-net
+  internal-net:
